src/pages/opdBilling/components/createBill/CreateBill.scss
.payment-mode {
  &.ant-select {
    .ant-select-selector {
      border-radius: 10px 0px 0px 10px !important;
      width: 165px;
      height: 48px;
      background: var(--T-BG-10, #f1f1f5);
    }

    .ant-select-arrow {
      top: 72%;
    }
  }
}

.payment-input {
  &.ant-input-affix-wrapper {
    border-radius: 0px 10px 10px 0px !important;
    height: 48px;
  }
}

.patientInfo {
  font-family: "Poppins";
  font-size: 14px !important;
  font-weight: 400 !important;
  line-height: 26px;
  letter-spacing: 0.10000000149011612px;
}

.wave-container {
  position: absolute;
  bottom: -15px;
  left: 0;
  width: 100%;
  height: 15px;
  /* Fixed height for wave container */
  overflow: hidden;
  /* Prevent overflow */
}

.wave-bottom {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  display: block;
  min-height: 15px;
  /* Minimum height for wave */
  object-fit: cover;
  /* Ensure image covers area */
  pointer-events: none;
  /* Prevent image from interfering with interactions */
}

.input-create-bill {
  border-radius: 10px !important;
  color:  #454551;
}

.input-create-bill:disabled {
  border-radius: 10px;
  border: 1px solid var(--T-Text-10, #E2E2EA);
  background: var(--T-BG-100, #FAFAFB);
}

.border-radius-10 {
  border-radius: 10px !important;
}

.create-bill-table {
  .ant-table-cell {
    padding: 4px !important;
  }
}

.disabled {
  background: rgba(0, 0, 0, 0.04) !important;
}

.opd-billing{
  .video-animat {
    img:nth-child(2) {
      position: absolute;
      left: -7px;
      top: -7px;
      width: 62px;
      height: 62px;
      z-index: 1;
  }
}
}

